[gd_scene load_steps=7 format=3 uid="uid://mja1sig6msc"]

[ext_resource type="Script" path="res://Scene/menu_page.gd" id="1_fomrx"]
[ext_resource type="Texture2D" uid="uid://dikbthg12m36d" path="res://Style/Resources/Main_menu_background.tres" id="1_mq3m8"]
[ext_resource type="AudioStream" uid="uid://cuo7vhg268g4f" path="res://Style/Sounds/page_flip.mp3" id="3_1jt7k"]
[ext_resource type="Theme" uid="uid://dbb1vupg6t5t2" path="res://Style/Resources/story_button_style.tres" id="3_r1g43"]
[ext_resource type="Theme" uid="uid://r1kjdwxa7fta" path="res://Style/Resources/play_button_style.tres" id="4_ou1bt"]
[ext_resource type="Theme" uid="uid://c68irc2irblc4" path="res://Style/Resources/quit_button_style.tres" id="5_uuom4"]

[node name="MenuPage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fomrx")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("1_mq3m8")
expand_mode = 1

[node name="Story" type="Button" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 54.0
offset_right = 245.0
offset_bottom = 241.0
theme = ExtResource("3_r1g43")

[node name="Play" type="Button" parent="."]
layout_mode = 0
offset_left = 298.0
offset_top = 218.0
offset_right = 489.0
offset_bottom = 438.0
theme = ExtResource("4_ou1bt")

[node name="Quit" type="Button" parent="."]
layout_mode = 0
offset_left = 38.0
offset_top = 366.0
offset_right = 231.0
offset_bottom = 535.0
theme = ExtResource("5_uuom4")

[node name="FlipSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_1jt7k")

[connection signal="mouse_entered" from="Story" to="." method="_on_story_mouse_entered"]
[connection signal="pressed" from="Story" to="." method="_on_story_pressed"]
[connection signal="mouse_entered" from="Play" to="." method="_on_play_mouse_entered"]
[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="mouse_entered" from="Quit" to="." method="_on_quit_mouse_entered"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
